# rag-insurance-support-agent

./: README.md  pyproject.toml
config/: __init__.py  prompts.py  settings.py
dashboard/: __init__.py  app.py  auth.py
docs/: ARCHITECTURE.md  AWS_SERVICES_DEEP_DIVE.md  SYSTEM_DESIGN_COMPONENTS.md  SYSTEM_DESIGN_INTERVIEW.md
infra/: __init__.py  app.py
infra/stacks/: ingestion_stack.py  ml_stack.py  network_stack.py  orchestration_stack.py  search_stack.py  security_stack.py  storage_stack.py
lambdas/: __init__.py
lambdas/ingestion/: __init__.py  attachment_processor.py  email_handler.py  webhook_handler.py
lambdas/orchestration/: __init__.py  feedback_handler.py  hitl_callback.py  response_sender.py
lambdas/preprocessing/: __init__.py  intent_classifier.py  pii_redactor.py
llm/: __init__.py  generator.py  guardrails.py  prompt_templates.py
orchestration/: __init__.py  state_machine.py
rag/: __init__.py  embeddings.py  indexing_pipeline.py  retriever.py  vector_store.py
schemas/: __init__.py  classification.py  response.py  ticket.py
tests/integration/: test_pipeline.py
tests/unit/: test_guardrails.py  test_intent_classifier.py  test_pii_redactor.py  test_retriever.py
