[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "insurance-ai-agent"
version = "1.0.0"
description = "Insurance Customer Support AI Agent — AWS Bedrock, SageMaker, RAG"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "langchain>=0.1.0",
    "langchain-aws>=0.1.0",
    "langchain-community>=0.0.10",
    "opensearch-py>=2.4.0",
    "requests-aws4auth>=1.2.0",
    "jinja2>=3.1.0",
    "email-parser>=0.0.1",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dashboard = [
    "streamlit>=1.30.0",
    "streamlit-authenticator>=0.3.0",
]
indexing = [
    "pypdf>=3.17.0",
    "tiktoken>=0.5.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "moto[all]>=5.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[tool.setuptools.packages.find]
include = [
    "config*",
    "schemas*",
    "lambdas*",
    "rag*",
    "llm*",
    "orchestration*",
    "dashboard*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
